--- a/src/address-popup.css
+++ b/src/address-popup.css
@@ -69,10 +69,13 @@
 }
 
 #address-input {
-   border: 2px solid black;
+   border: none;
+   border-bottom: 1px solid black;
    border-radius: 0;
-   padding: .5rem 1rem;
+   padding: 0.5rem 1rem;
    text-transform: uppercase;
+   margin: 1rem;
+   max-width: calc(100% - 2rem);
 }
 
 .address-option {
