--- a/src/cart.css
+++ b/src/cart.css
@@ -107,6 +107,11 @@
     font-size: 1rem;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+    margin-top: 3rem;
+    font-family: 'brandon-grotesque';
+    text-transform: unset;
+    background: #913F39;
+    padding: 0.5rem 2rem;
  }
 
  .cart-item-top button:hover {
