--- a/src/sdk.css
+++ b/src/sdk.css
@@ -7,13 +7,17 @@
 }
 
 .recaptcha-div {
-  position: sticky;
-  bottom: 10px;
-  width: calc( 100% - 4rem);
-  text-align: center;
-  margin-bottom: -2rem;
-  font-size: 12px;
-  padding: 0 2rem;
+    bottom: 10px;
+    width: calc( 100% - 4rem);
+    text-align: center;
+    margin-bottom: -2rem;
+    background: #06303a;
+    width: 100%;
+    color: white;
+    padding: 0 2rem;
+    font-family: 'brandon-grotesque';
+    font-size: 14px;
+    padding-bottom: 1rem;
 }
 
 .loader-skeleton {
