--- a/src/pdp.css
+++ b/src/pdp.css
@@ -412,7 +412,11 @@ label[for="engraving-checkbox"] {
    border: none;
    margin-top: 6px;
    max-width: 320px;
+   border: 3px solid #e4dec9;
+   border-radius: revert-layer;
 }
+
+#engraving-inputs:focus { outline: none; }
 
 #engraving-inputs input:read-only {
    border-bottom: none;
